[package]
name = "language-matcher"
version = "0.2.0"
authors = ["Berrysoft <Strawberry_Str@hotmail.com>"]
categories = ["internationalization", "localization"]
description = "A language matcher with CLDR."
edition = "2024"
keywords = ["language", "langid"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Berrysoft/language-matcher"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
quick-xml = { version = "0.37", features = ["serialize"] }
icu_locale = { version = "2.0", features = ["serde"] }
